# python-kaufland-api

./: .gitignore  AGENTS.md  LICENSE  Makefile  README.md  pyproject.toml  swagger.json
.github/: FUNDING.yml
.github/workflows/: publish.yml
kaufland/: __init__.py
kaufland/api/: assortment_coverage.py  attributes.py  buybox.py  carriers.py  categories.py  import_files.py  info.py  order_invoices.py  order_units.py  orders.py  product_data.py  products.py  reports.py  return_units.py  returns.py  shipments.py  shipping_groups.py  shipping_labels.py  status.py  subscriptions.py  tickets.py  units.py  variant_suggestions.py  warehouses.py
kaufland/asyncio/: _transport_httpx.py  client.py
kaufland/asyncio/api/: __init__.py  assortment_coverage.py  attributes.py  buybox.py  carriers.py  categories.py  import_files.py  info.py  order_invoices.py  order_units.py  orders.py  product_data.py  products.py  reports.py  return_units.py  returns.py  shipments.py  shipping_groups.py  shipping_labels.py  status.py  subscriptions.py  tickets.py  units.py  variant_suggestions.py  warehouses.py
kaufland/base/: ApiResponse.py  __init__.py  _core.py  _transport_httpx.py  base_client.py  client.py  credential_provider.py  decorators.py  exceptions.py
tests/: test_base.py  test_client.py  test_core.py  test_credentials.py  test_generated_clients.py
tools/: generate_clients.py
