[project]
name = "python-kaufland-api"
version = "0.1.0"
description = "Python wrapper for the Kaufland Marketplace Seller API"
readme = "README.md"
authors = [{ name = "Michael Primke" }]
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: MIT License",
]
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.27.0",
]

[project.urls]
Sponsor = "https://github.com/sponsors/saleweaver"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["kaufland*"]
